<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- The name of the application as a whole -->
    <string name="app_name">NowPlaying Music Extension</string>

    <!-- This text is shown in the lists of infinite music extension as a description of the extension -->
    <string name="description">Share playing song</string>
    <string name="tweet">Tweet</string>
    <string name="content_default">Now Playing $t by $a #nowplaying</string>
    <string name="share">Share</string>
    <string name="share_text">Share Text</string>
    <string name="share_music_file">Share Music File</string>
    <string name="cancel">Cancel</string>
    <string name="error">Error</string>
    <string name="error_message">Sorry, sharing the playing song failed.</string>
    <string name="edit_template">Edit Template</string>
    <string name="ok">OK</string>
    <string name="close">Close</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_preferences">NowPlaying Music Extension - Preferences</string>
    <string name="menu_information">Song Info</string>
    <string name="title_activity_information">NowPlaying Music Extension - Song Information</string>
    <string name="template_explain">You can use the following keywords:\n  $t (will be replaced with the title of the song)\n  $a (will be replaced with the name of the artist)\n  $l (will be replaced with the title of the album)\n  $d (will be replaced with the duration of the song)\n  $y (will be replaced with the year when the song was recorded)</string>
    <string name="template">Template</string>
    <string name="revert">Revert to default</string>
    <string name="template_of_text">Template of Text</string>
    <string name="edit">Edit</string>
    <string name="apply_template">Apply Template</string>
    <string name="quit_after_sharing">Quit after sharing</string>
    <string name="confirm_revert">Are you sure you want to revert templates to default?</string>
    <string name="content_default_2">#NowPlaying $t / $a ($d)</string>
    <string name="content_default_3">Listening to $t ($l) by $a #NowPlaying</string>
    <string name="content_default_4">http://www.google.com/search?q=$t</string>
    <string name="post_to_facebook">Post to Facebook</string>
    <string name="send_to_app">Send to App</string>
    <string name="posting_completed">Posting Completed</string>
    <string name="posting_failed">Posting Failed</string>
    <string name="posting_cancelled">Posting Cancelled</string>
    <string name="info_title">Title</string>
    <string name="info_artist">Artist</string>
    <string name="info_album">Album</string>
    <string name="info_duration">Duration</string>
    <string name="info_year">Year</string>
    <string name="info_trackno">Track No.</string>
    <string name="info_disc">Disc</string>
    <string name="info_composer">Composer</string>
    <string name="info_mediatype">Media Type</string>
    <string name="info_location">Location of File</string>
    <string name="info_not_available"> -- </string>
    <string name="share_as_url">Share text beginning with "http://" as URL</string>
    <string name="as_music_file">As music file</string>
    <string name="as_binary_file">As binary file</string>
    <string name="copy">Copy</string>
    <string name="copied">Copied </string>
    <string name="search">Search</string>

</resources>